--- a/themes/even/src/css/_partial/_header/_logo.scss
+++ b/themes/even/src/css/_partial/_header/_logo.scss
@@ -4,6 +4,7 @@
 
 .logo-wrapper {
   float: left;
+  width: 100%;
 
   .logo {
     font-size: $logo-font-size;
