--- a/themes/even/src/css/_partial/_header/_menu.scss
+++ b/themes/even/src/css/_partial/_header/_menu.scss
@@ -4,6 +4,8 @@
 
 .site-navbar {
   float: right;
+  width: 100%;
+  text-align: right;
 
   .menu {
     display: inline-block;
